// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/MultiSelectField should correctly render 1`] = `
<div
  className="bdl-MultiSelectField"
>
  <Label>
    <MultiSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={Array []}
      placeholder={
        <FormattedMessage
          defaultMessage="Select Values"
          id="boxui.metadataInstanceFields.fieldMultiSelectValue"
        />
      }
      selectedValues={
        Array [
          "value",
        ]
      }
    />
  </Label>
</div>
`;

exports[`features/metadata-instance-editor/fields/MultiSelectField should correctly render with description 1`] = `
<div
  className="bdl-MultiSelectField"
>
  <Label>
    <i
      className="bdl-MultiSelectField-desc"
    >
      description
    </i>
    <MultiSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={Array []}
      placeholder={
        <FormattedMessage
          defaultMessage="Select Values"
          id="boxui.metadataInstanceFields.fieldMultiSelectValue"
        />
      }
      selectedValues={
        Array [
          "value",
        ]
      }
    />
  </Label>
</div>
`;
